# -template_fusion_plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
docs/source/my_fusion_package_api/: index.rst
docs/source/releases/: index.rst  v0_1_0.rst
my_fusion_package/: __init__.py
my_fusion_package/plugins/yaml/products/: layered.yaml  my_layered.yaml
my_package/: __init__.py
my_package/yaml_configs/product_inputs/: layered.yaml
tests/: test_all.sh
tests/scripts/: @my_layered_test_script@.sh  my_layered_test_script.sh
