# @ pyproject.toml specifies how to install your package, and ensures it is
# @ installed as a valid GeoIPS plugin package.

# @ Replace all instances of @ within this template with appropriate values for
# @ your particular use case.
# @ Once complete, remove all lines containing "@" from this file.

[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"*" = [
    "plugins/*.txt",
    "plugins/*/*.txt",
    "plugins/*/*/*.txt",
    "plugins/*/*/*/*.txt",
    "plugins/*/*/*/*/*.txt",
    "plugins/*.yaml",
    "plugins/*/*.yaml",
    "plugins/*/*/*.yaml",
    "plugins/*/*/*/*.yaml",
    "plugins/*/*/*/*/*.yaml",
    "schema/*.yaml",
    "schema/*/*.yaml",
    "schema/*/*/*.yaml",
    "schema/*/*/*/*.yaml",
    "schema/*/*/*/*/*.yaml",
    "image_utils/ascii_palettes/*",
]

[tool.setuptools.dynamic]
entry-points = {file = ["entry-points.ini"]}

[tool.setuptools_scm]
"version_scheme" = "post-release"  # Use current version .postN vs incrementing
"local_scheme" = "no-local-version"  # Don't include hash, or date, just postN
# @ Replace "my_fusion_package" with your package name, ie:
"write_to" = "my_fusion_package/version.py"  # Write an actual file

[project]
# @ Replace "my_fusion_package" with your package name, ie:
name = "my_fusion_package"
authors = []
description = "@package@ GeoIPS Plugin Package"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.entry-points."geoips.plugin_packages"]
# @ Replace "my_fusion_package" with your package name, ie:
"my_fusion_package" = "my_fusion_package"

# @ Add your own required entry points, based on your new functionality
# Uncomment and update appropriately for each module you will be implementing.
# You can have more than one module per module type (ie, arbirary numbers of
# readers, algorithms, etc)
# [project.entry-points."geoips.algorithms"]
# "@my_alg@" = "@package@.plugins.modules.algorithms.@my_alg@"
# [project.entry-points."geoips.colormaps"]
# "@my_cmap@" = "@package@.plugins.modules.colormaps.@my_cmap@"
# [project.entry-points."geoips.interpolators"]
# "@my_interp@" = "@package@.plugins.modules.interpolators.@my_interp@"
# [project.entry-points."geoips.output_formatters"]
# "@my_output_format_1@" = "@package@.plugins.modules.output_formatters.@my_output_format_1@"
# "@my_output_format_2@" = "@package@.plugins.modules.output_formatters.@my_output_format_2@"
# [project.entry-points."geoips.readers"]
# "@my_reader@" = "@package@.plugins.modules.readers.@myreader@"
# [project.entry-points."geoips.trackfile_parsers"]
# "@my_parser@" = "@package@.plugins.modules.trackfile_parsers.@my_parser@"
# [project.entry-points."geoips.filename_formatters"]
# "@my_fname@" = "@package@.plugins.modules.filename_formatters.@my_fname@"
# [project.entry-points."geoips.title_formatters"]
# "@my_title@" = "@package@.plugins.modules.title_formatters.@my_title@"
# [project.entry-points."geoips.coverage_checkers"]
# "@my_covg@" = "@package@.plugins.modules.coverage_checkers.@my_covg@"
